[package]
name = "bybit-data-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"
ring = "0.17.14"
rustls = { features = ["ring"], version = "0.23.35"}
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
serde = { features = ["derive"], version = "1.0.228"}
serde_json = "1.0.147"
tracing-subscriber = "0.3.22"
thiserror = "2.0.17"
tracing = "0.1.44"
clickhouse = {features = ["time", "inserter"], version = "0.14.1"}
anyhow = "1.0.100"
hex = "0.4.3"
url = "2.5.7"
time = { version = "0.3.44", features = ["macros", "rand", "parsing", "serde"] }
fixnum = {features = ["i128", "serde"], version = "0.9.3"}
